# zoomies

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  get_age_prediction_tool.ipynb  kinematic_relation.py  pyproject.toml  quick_jz.py
age_prediction_tool/: kinematic_relation.py
docs/: api.rst  citation.rst  conf.py  index.rst  installation.rst  requirements.txt  tutorial_1.rst  tutorials.rst  usage.rst
docs/source/: api.rst  conf.py  index.rst
docs/tutorials/: Main_Kinematic_Age_Spline.ipynb  get_age_predictions.ipynb
src/: __init__.py  kinematic_relation.py
tutorials/: Main_Kinematic_Age_Spline.ipynb  TestFakeData.ipynb  age.txt  get_age_prediction_tool.ipynb  get_age_predictions.ipynb  lnJz.txt
zoomies/: __init__.py  kinematic_relation.py  quick_jz.py
