[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoomies"
version = "1.0.0"
authors = [
  { name="Sheila Sagear", email="ssagearastro@gmail.com" },
]
description = "Age prediction tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = ["numpy", "numpyro",  "astropy", "matplotlib", "tqdm", "pyia", "jax", "jax_cosmo", "gala>=1.8", "galpy", "arviz"]


[project.urls]
"repository" = "https://github.com/ssagear/zoomies"
